--- a/style_animals.css
+++ b/style_animals.css
@@ -78,6 +78,72 @@ body {
 .dirty_yellow{
    color: #AD7F00;
 }
+
+ /* кнопки */
+ .rectangle-1-white{
+   width: 296px;
+   height: 42px;
+   background: #F6F6F6;
+box-shadow: 7px 7px 16px #E3E3E3, -4px -4px 8px rgba(255, 255, 255, 0.7), inset 13px 22px 8px rgba(0, 0, 0, 0.02);
+ border-radius: 58px;
+ padding: 5px;
+ box-sizing: border-box; 
+ margin-top: 17px;
+ text-align: center;
+ margin-left: 19px;
+}
+
+.rectangle-2-white{
+   width: 286px;
+   height: 32px;
+   background: linear-gradient(180deg, #FBFBFB 0%, #F6F6F6 100%);
+   box-shadow: 3px 3px 13px rgba(128, 128, 128, 0.25);
+ border-radius: 58px;
+ box-sizing: border-box; 
+ 
+}
+ 
+ .rectangle-1{
+   width: 209px;
+   height: 42px;
+   background: linear-gradient(180deg, #FFDE89 0%, #FFCB38 100%);
+ box-shadow: 7px 7px 16px #E3E3E3, -3px -4px 8px rgba(255, 255, 255, 0.9), inset 13px 22px 8px rgba(0, 0, 0, 0.02);
+ border-radius: 58px;
+ padding: 5px;
+ box-sizing: border-box; 
+ margin-top: 29px;
+ text-align: center;
+ margin-left: 63px;
+}
+
+.rectangle-2{
+   width: 199px;
+   height: 32px;
+   background: linear-gradient(180deg, #FFECB5 0%, #FFE69F 0.01%, #FFD45A 100%);
+   box-shadow: 3px 3px 13px rgba(0, 0, 0, 0.25);
+   border-radius: 58px;
+   box-sizing: border-box; 
+}
+
+.rectangle-2 a, .rectangle-2-white a{
+   width: 183px;
+   height: 42px;
+   font-family: Gilroy;
+   font-style: normal;
+   font-weight: 500;
+   font-size: 20px;
+   line-height: 30px;
+   color: #242424;
+   text-decoration: none;
+ 
+}
+
+.rectangle-2 .button, .rectangle-2-white .button{
+   border: none; 
+   outline: none;
+   background: rgba(255, 255, 255, 0);
+}
+
  
  /* header */
  header{
@@ -135,23 +201,46 @@ main{
     grid-template-columns: 1fr 1fr 1fr;
     margin: 0px 110px;
     gap: 42px 21px;
+    position: relative;
  }
 
+.buttons {
+   display: none;
+}
+
+.grid-wrap{
+   position:relative;
+    float:left;
+    width:368px;
+    height:555px;
+    
+}
+
  figure{
+   position:absolute;
+   transition: 0.2s;
    width: 368px;
    height: 555px;
+    /*height: 700px;*/
    border: 1px solid #ffffff;
    background: #F6F6F6;
    box-shadow: 6px 6px 16px rgba(163, 163, 163, 0.6), -8px -8px 16px #FFFFFF, inset 4px 4px 16px rgba(203, 203, 203, 0.25);
    border-radius: 5px;
+   
+}
+
+ figure:hover .buttons{
+   display: block;
 }
 
 figure:hover{
+   z-index: 2;
    height: 700px;
    box-shadow: 6px 6px 16px rgba(163, 163, 163, 0.6), -8px -8px 16px #FFFFFF, inset 4px 4px 16px rgba(203, 203, 203, 0.25);
    border-radius: 5px;
    border: 1px solid #FFC41E;
    cursor: url(/img/курсор.cur), pointer;
+   
 }
 figure img{
    padding: 17px 16px 8px 17px;
