--- a/style_new.css
+++ b/style_new.css
@@ -968,3 +968,34 @@ line-height: 40px;
    text-align: center;
    padding-bottom: 16px;
   }
+
+
+  /* модальные окна
+  #form-1
+  */
+
+  .form-1{
+   position: fixed;
+   z-index: 2;
+   width: 525px;
+   background: #fff;
+   font-family: 'Gilroy', Courier, monospace;
+   margin: 30px 40px;
+   display: none;
+   top: 0;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   }
+
+  .form-1:target{
+     display: block;
+     pointer-events: auto;
+    }
+
+
+  .form-1   img{
+   width: 95px;
+   height: 101px;
+   border-radius: 50%;
+}
