--- a/style-next.css
+++ b/style-next.css
@@ -317,34 +317,163 @@ a{
    color: #242424;
 }
 
-.menu{
+#menu__toggle{
+   display: none;
+}
+
+li{
+   list-style-type: none;
+}
+
+.menu__box{
    margin-top: 54px;
    margin-left: 387px;
 }
 @media (max-width:1440px){
-   .menu{
+   .menu__box{
       margin-left: 144px;
    }
 }
 @media (max-width:1366px){
-   .menu{
+   .menu__box{
       margin-left: 110px;
    }
 }
 
-.menu__link{
+li{
    padding-right: 32px;
 }
 
-.menu__link:nth-child(3){
+li:nth-child(3){
    padding-left: 162px;
 }
 @media (max-width:1024px){
-   .menu__link:nth-child(3){
+  li:nth-child(3){
       padding-left: 20px;
    }
 }
+/*-----------------------------меню бургер--------------------------------*/
+@media (max-width:768px){
+#menu__toggle {
+   opacity: 0;
+ }
+ 
+ #menu__toggle:checked ~ .menu__btn > span {
+   transform: rotate(45deg);
+ }
+ #menu__toggle:checked ~ .menu__btn > span::before {
+   top: 0;
+   transform: rotate(0);
+ }
+ #menu__toggle:checked ~ .menu__btn > span::after {
+   top: 0;
+   transform: rotate(90deg);
+ }
+ #menu__toggle:checked ~ .menu__box {
+   visibility: visible;
+   left: 0;
+ }
+ 
+ .menu__btn {
+   display: flex;
+   align-items: center;
+   position: fixed;
+   top: 34px;
+   left: 115px;
+ 
+   width: 30px;
+   height: 20px;
+ 
+   cursor: pointer;
+   z-index: 1;
+ }
+ 
+ .menu__btn > span,
+ .menu__btn > span::before,
+ .menu__btn > span::after {
+   display: block;
+   position: absolute;
+ 
+   width: 100%;
+   height: 2px;
+ 
+   background-color: #616161;
+ 
+   transition-duration: .25s;
+ }
+ .menu__btn > span::before {
+   content: '';
+   top: -8px;
+ }
+ .menu__btn > span::after {
+   content: '';
+   top: 8px;
+ }
+ 
+ .menu__box {
+   display: block;
+   position: fixed;
+   visibility: hidden;
+   top: 0;
+   left: -100%;
+  padding-top: 80px;
+   width: 300px;
+   margin: 0;
+   list-style: none;
+ 
+   background-color: #FFFFFF;
+   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+ 
+   transition-duration: .25s;
+ }
 
+ ul.menu__box.flex {
+   position: absolute;
+   width: 100%;
+   margin-top: -1px;
+   left: 0;
+   display: block;
+}
+ 
+ .menu__link {
+   display: block;
+   padding: 12px 24px;
+   text-decoration: none;
+   transition-duration: .25s;
+ }
+
+ li{
+    text-align: center;
+    padding-top: 35px;
+    padding-bottom: 24px;
+ }
+
+ li:nth-child(3){
+    padding-left: 0px;;
+ }
+
+ .menu__link:hover {
+   background-color: #CFD8DC;
+ }
+}
+@media(max-width:640px){
+   .menu__btn{
+      top: 32px;
+      left: 133px;
+    
+      width: 24px;
+      height: 16px;
+   }
+}
+@media(max-width:360px){
+   .menu__btn{
+      top: 32px;
+   left: 34px;
+   }
+}
+
+
+/*----------------------------кнопки соц сетей--------------------------------*/
 .button-logo-menu{
    margin-left: 250px;
    margin-top: 33px;
@@ -354,7 +483,22 @@ a{
       margin-left: 78px;
    }
 }
-
+@media(max-width:768px){
+   .button-logo-menu{
+      margin-top: 24px;
+      margin-left: 503px;
+   }
+}
+@media(max-width:640px){
+   .button-logo-menu{
+      margin-left: 425px;
+   }
+}
+@media(max-width:360px){
+   .button-logo-menu{
+      margin-left: 244px;
+   }
+}
 
 .button-logo-outercircle-yellow{
    width: 63px;
@@ -366,6 +510,29 @@ a{
    padding: 7px; 
    margin-right: 28px;
 }
+@media(max-width:768px){
+   .button-logo-outercircle-yellow{
+      width: 52px;
+      height: 52px;
+      padding: 6px;
+   }
+}
+@media(max-width:640px){
+   .button-logo-outercircle-yellow{
+      width: 44px;
+      height: 44px;
+      padding: 6px;
+      margin-right: 22px;
+   }
+}
+@media(max-width:360px){
+   .button-logo-inst .button-logo-outercircle-yellow{
+      width: 44px;
+      height: 44px;
+      padding: 6px;
+      margin-right: 0px;
+   }
+}
 
 .button-logo-innercircle-yellow{
    width: 49px;
@@ -376,12 +543,328 @@ a{
    box-sizing: border-box;  
    padding: 4px;
 }
+@media(max-width:768px){
+   .button-logo-innercircle-yellow{
+      width: 40px;
+      height: 40px;
+   }
+}
+@media(max-width:640px){
+   .button-logo-innercircle-yellow{
+      width: 32px;
+      height: 32px;
+   }
+}
 
 .button-logo-vk__link{
    padding-top: 12px;
    padding-left: 4px;
 }
+@media(max-width:768px){
+   .button-logo-vk__link{
+      width: 24.49px;
+      height: 14.69px;
+      padding-top: 9px;
+      padding-left: 3px;
+   }
+}
+@media(max-width:640px){
+   .button-logo-vk__link{
+      width: 19.59px;
+      height: 11.76px;
+      padding-top: 7px;
+      padding-left: 2px;
+   }
+}
 
 .button-logo-inst__link{
    padding: 7px;
 }
+@media(max-width:768px){
+   .button-logo-inst__link{
+      width: 22.04px;
+      height: 22.04px;
+      padding: 6px;
+   }
+}
+@media(max-width:640px){
+   .button-logo-inst__link{
+      width: 17.63px;
+      height: 17.63px;
+      padding: 4px;
+   }
+}
+
+/*----------------------------1ый экран--------------------------------*/
+
+.main-header{
+   margin-top: 91px;
+   margin-left: 387px;
+   position: relative;
+}
+@media (max-width:1440px){
+   .main-header{
+      margin-left: 114px;
+   }
+}
+@media (max-width:1366px){
+   .main-header{
+      margin-left: 110px;
+   }
+}
+@media (max-width:1024px){
+   .main-header{
+      margin-top: 48px;
+   }
+}
+@media (max-width:768px){
+   .main-header{
+      margin-top: 22px;
+   }
+}
+@media (max-width:640px){
+   .main-header{
+      margin-top: 28px;
+      margin-left: 129px;
+   }
+}
+@media (max-width:360px){
+   .main-header{
+      margin-left: 30px;
+   }
+}
+
+
+h1{
+   font-family: 'GilroyBold';
+   font-size: 72px;
+   line-height: 87px;
+}
+@media (max-width:1024px){
+   h1{
+      font-size: 64px;
+      line-height: 77px;
+   }
+}
+@media (max-width:768px){
+   h1{
+      font-size: 42px;
+      line-height: 51px;
+   }
+}
+@media (max-width:640px){
+   h1{
+      font-size: 30px;
+      line-height: 36px;
+   }
+}
+
+.title-h1__subtitle{
+   width: 659px;
+   height: 18px;
+   padding-top: 2px;
+}
+@media (max-width:768px){
+   .title-h1__subtitle {
+      width: 311px;
+      height: 32px;
+      padding-top: 6px;
+   }
+}
+@media (max-width:640px){
+   .title-h1__subtitle {
+      width: 282px;
+      height: 28px;
+      padding-top: 0px;
+   }
+}
+@media (max-width:360px){
+   .title-h1__subtitle {
+      width: 211px;
+      height: 28px;
+   }
+}
+
+.title-h1__subtitle p{
+   font-weight: 300;
+   font-size: 16px;
+   line-height: 18px;
+   color: #6B6B6B;
+}
+@media (max-width:1024px){
+   .title-h1__subtitle p{
+      font-size: 14px;
+      line-height: 16px;
+   }
+}
+@media (max-width:640px){
+   .title-h1__subtitle p{
+      font-size: 12px;
+      line-height: 14px;
+   }
+}
+
+.main-header__target{
+   width: 461px;
+   height: 60px;
+   padding-top: 12px;
+}
+@media (max-width:768px){
+   .main-header__target {
+      width: 311px;
+      height: 80px;
+      padding-top: 8px;
+   }
+}
+@media (max-width:640px){
+   .main-header__target {
+      width: 282px;
+      height: 100px;
+      padding-top: 20px;
+   }
+}
+@media (max-width:360px){
+   .main-header__target {
+      width: 158px;
+      height: 160px;
+   }
+}
+
+.main-header__target p{
+   font-weight: 600;
+   font-size: 16px;
+   line-height: 140%;
+   color: #474747;
+}
+@media (max-width:1024px){
+   .main-header__target p{
+      font-size: 14px;
+   }
+}
+
+
+.main-header__yelllow{
+   width: 428px;
+   height: 116px;
+   padding: 43px 0px;
+}
+@media (max-width:1024px){
+   .main-header__yelllow {
+      width: 300px;
+      height: 120px;
+   }
+}
+@media (max-width:768px){
+   .main-header__yelllow {
+      width: 204px;
+      height: 114px;
+      padding: 40px 0px 44px 0px;
+   }
+}
+@media (max-width:640px){
+   .main-header__yelllow {
+      width: 381px;
+      height: 57px;
+      padding: 152px 0px 20px 0px;
+      text-align: center;
+   }
+}
+@media (max-width:360px){
+   .main-header__yelllow {
+      width: 300px;
+      height: 76px;
+      padding-top: 70px;
+   }
+}
+
+.main-header__yelllow p{
+   font-weight: 600;
+   font-size: 24px;
+   line-height: 29px;
+   color: #C78100;
+}
+@media (max-width:1024px){
+   .main-header__yelllow p{
+      font-size: 20px;
+      line-height: 24px;
+   }
+}
+@media (max-width:768px){
+   .main-header__yelllow p{
+      font-size: 16px;
+      line-height: 19px;
+   }
+}
+
+/*----------------------------Желтая кнопка--------------------------------*/
+
+.outerbutton-yellow{
+   width: 221px;
+   height: 42px;
+   background: linear-gradient(180deg, #FFDE89 0%, #FFCB38 100%);
+   box-shadow: 7px 7px 16px #E3E3E3, -3px -4px 8px rgba(255, 255, 255, 0.9), inset 13px 22px 8px rgba(0, 0, 0, 0.02);
+   border-radius: 58px;
+   padding: 5px;
+   box-sizing: border-box; 
+   text-align: center;
+}
+
+.innerbutton-yellow{
+   width: 211px;
+   height: 32px;
+   background: linear-gradient(180deg, #FFECB5 0%, #FFE69F 0.01%, #FFD45A 100%);
+   box-shadow: 3px 3px 13px rgba(0, 0, 0, 0.25);
+   border-radius: 58px;
+   box-sizing: border-box; 
+}
+
+.button{
+   border: none; 
+   outline: none;
+   background: rgba(255, 255, 255, 0);
+}
+
+.button a{
+   font-family: Gilroy;
+   font-style: normal;
+   font-weight: 500;
+   font-size: 20px;
+   text-align: center;
+   line-height: 30px;
+   color: #000;
+}
+/*----------------------Продолжение 1го экрана--------------------------------*/
+
+.main-header .outerbutton-yellow{
+   width: 183px;
+}
+@media (max-width:640px){
+   .main-header .outerbutton-yellow{
+      width: 194px;
+      height: 30px;
+      margin-left: 94px;
+   }
+}
+@media (max-width:360px){
+   .main-header .outerbutton-yellow{
+      margin-left: 49px;
+   }
+}
+
+.main-header__button .innerbutton-yellow{
+   width: 173px;
+}
+@media (max-width:640px){
+   .main-header__button .innerbutton-yellow{
+      width: 184px;
+      height: 20px;
+   }
+}
+
+@media (max-width:640px){
+   .main-header__button a{
+      font-size: 18px;
+      line-height: 20px;
+   }
+}
+
