--- a/style-next.css
+++ b/style-next.css
@@ -598,8 +598,7 @@ li:nth-child(3){
 /*----------------------------1ый экран--------------------------------*/
 
 .main-header{
-   margin-top: 91px;
-   margin-left: 387px;
+   margin: 68px 0px 272px 387px;
    position: relative;
 }
 @media (max-width:1440px){
@@ -614,23 +613,25 @@ li:nth-child(3){
 }
 @media (max-width:1024px){
    .main-header{
-      margin-top: 48px;
+      margin-top: 25px;
+      margin-bottom: 107px;
    }
 }
 @media (max-width:768px){
    .main-header{
-      margin-top: 22px;
+      margin-top: 0px;
+      margin-bottom: 42px;
    }
 }
 @media (max-width:640px){
    .main-header{
-      margin-top: 28px;
-      margin-left: 129px;
+      margin: 8px 0px 47px 129px;
    }
 }
 @media (max-width:360px){
    .main-header{
       margin-left: 30px;
+      margin-bottom: 28px;
    }
 }
 
@@ -868,3 +869,760 @@ h1{
    }
 }
 
+/*----------------------2 экран--------------------------------*/
+.screen-2{
+   background: #ffffff;
+}
+@media (max-width:640px){
+   .screen-2 .flex{
+      display: block;
+   }
+}
+
+.container{
+   padding: 55px 0;
+}
+@media (max-width:1024px){
+   .container{
+      padding: 36px 0;
+   }
+}
+@media (max-width:768px){
+   .container{
+      padding: 24px 0;
+   }
+}
+@media (max-width:640px){
+   .container{
+      padding: 16px 0;
+   }
+}
+ 
+ .custom-image-wrapper {
+  position: relative;
+  margin-left: 330px;
+ }
+ @media (max-width:1440px){
+   .custom-image-wrapper{
+      margin-left: 112px;
+   }
+ }
+ @media (max-width:1366px){
+   .custom-image-wrapper{
+      margin-left: 76px;
+   }
+ }
+ @media (max-width:1024px){
+   .custom-image-wrapper{
+      margin-left: 0px;
+   }
+ }
+ 
+ .custom-image-wrapper::before {
+   content: '';
+   width: 592px;
+   height: 516px;
+   position: absolute;
+   right: 50%;
+   top: 0;
+   bottom: 0;
+   background-color: #FFC41E;
+ }
+ @media (max-width:1440px){
+   .custom-image-wrapper::before{
+      width: 379px;
+   }
+ }
+ @media (max-width:1024px){
+   .custom-image-wrapper::before{
+      height: 362px;
+      width: 267px;
+      left: 0%;
+   }
+ }
+ @media (max-width:768px){
+   .custom-image-wrapper::before{
+      height: 270px;
+      width: 204px;
+      
+   }
+ }
+ @media (max-width:640px){
+   .custom-image-wrapper::before{
+      width: 277px;
+      height: 193px;
+      
+   }
+ }
+ @media (max-width:360px){
+   .custom-image-wrapper::before{
+      height: 190px;
+      width: 140px;
+      
+   }
+ }
+
+
+ .custom-image-wrapper__main-image {
+   position: relative;
+   width: 464px;
+ }
+ @media (max-width:1024px){
+   .custom-image-wrapper__main-image{
+      width: 330px;
+   }
+ }
+ @media (max-width:768px){
+   .custom-image-wrapper__main-image{
+      width: 243.93px;
+   }
+ }
+ @media (max-width:640px){
+   .custom-image-wrapper__main-image{
+      width: 172.47px;
+   }
+ }
+ 
+ 
+ .custom-image-wrapper__main-image::after {
+   background: url(/image/собака-круг.png) no-repeat center center;
+   width: 100%;
+ }
+ @media (max-width:1024px){
+   .custom-image-wrapper__main-image::after{
+      background-size: 330px;
+   }
+ }
+ @media (max-width:768px){
+   .custom-image-wrapper__main-image::after{
+      background-size: 243.93px;
+   }
+ }
+ @media (max-width:640px){
+   .custom-image-wrapper__main-image::after{
+      background-size: 172.47px;
+   }
+ }
+
+ 
+ .custom-image-wrapper__secondary-image {
+   position: absolute;
+   top: auto;
+   left: auto;
+   bottom: 0%;
+   right: -6%;
+   width: 228px;
+ }
+ @media (max-width:1024px){
+   .custom-image-wrapper__secondary-image{
+   bottom: 20%;
+   right: -6%;
+   width: 158.36px;
+   }
+ }
+ @media (max-width:768px){
+   .custom-image-wrapper__secondary-image{
+   bottom: 36%;
+   right: -2%;
+   width: 119.86px;
+   }
+ }
+ @media (max-width:640px){
+   .custom-image-wrapper__secondary-image{
+   bottom: -4%;
+   right: 42%;
+   width: 84.75px;
+   }
+ }
+ @media (max-width:360px){
+   .custom-image-wrapper__secondary-image{
+   right: 29%;
+   }
+ }
+ 
+ 
+ .custom-image-wrapper__secondary-image::after {
+   background: url(/image/кот-круг.png) no-repeat center center;
+   width: 100%
+ }
+ @media (max-width:1024px){
+   .custom-image-wrapper__secondary-image::after{
+      background-size: 158.36px;
+   }
+ }
+ @media (max-width:768px){
+   .custom-image-wrapper__secondary-image::after{
+      background-size: 119.86px;
+   }
+ }
+ @media (max-width:640px){
+   .custom-image-wrapper__secondary-image::after{
+      background-size: 84.75px;
+   }
+ }
+
+
+ .circle-image {
+   border-radius: 50%;
+   overflow: hidden;
+   border: 26px solid #FFC41E;
+ }
+ @media (max-width:1024px){
+   .circle-image {
+      border: 16px solid #FFC41E;
+      margin-left: 75px;
+      margin-right: 0px;
+   }
+ }
+ @media (max-width:768px){
+   .circle-image {
+      border: 13px solid #FFC41E;
+      margin-left: 65px;
+   }
+ }
+ @media (max-width:640px){
+   .circle-image {
+      border: 11px solid #FFC41E;
+      margin-left: 170px;
+   }
+ }
+ @media (max-width:360px){
+   .circle-image {
+      border: 9px solid #FFC41E;
+      margin-left: 55px;
+   }
+ }
+
+ .circle-image--small {
+   border: 8px solid #EEBF3A;
+ }
+ @media (max-width:1024px){
+   .circle-image--small {
+      border: 6px solid #FFC41E;
+   }
+ }
+ @media (max-width:768px){
+   .circle-image--small {
+      border: 4px solid #FFC41E;
+   }
+ }
+ @media (max-width:640px){
+   .circle-image--small {
+      border: 3px solid #FFC41E;
+   }
+ }
+ 
+ .circle-image::after {
+   content: '';
+   display: block;
+   padding-bottom: 100%;
+   height: 0;
+ }
+
+ .screen-2-text{
+      margin: 73px 0px 102px 94px;
+ }
+ @media (max-width:1024px){
+   .screen-2-text{
+      margin: 34px 0px 0px 73px;
+ } 
+ }
+ @media (max-width:768px){
+   .screen-2-text{
+      margin: 0px;
+      margin-left: 55px;
+ } 
+ }
+ @media (max-width:640px){
+   .screen-2-text{
+     margin: 32px 0px 0px 129px; 
+ } 
+ }
+ @media (max-width:360px){
+   .screen-2-text{
+     margin-left: 30px; 
+     margin-right: 30px;
+ } 
+ }
+
+
+ .screen-2-text__title{
+   width: 466px;
+   height: 94px;
+ }
+ @media (max-width:1024px){
+   .screen-2-text__title{
+      width: 323px;
+    }
+ }
+ @media (max-width:768px){
+   .screen-2-text__title{
+      width: 264px;
+    }
+ }
+ @media (max-width:640px){
+   .screen-2-text__title{
+      width: 382px;
+      height: 40px;
+    }
+   }
+@media (max-width:360px){
+   .screen-2-text__title{
+      width: 300px;
+   }
+}
+
+ .title-h3 {
+   font-weight: 600;
+   font-size: 28px;
+   line-height: 120%;
+   padding-bottom: 8px;
+ }
+ @media (max-width:1024px){
+   .title-h3{
+      font-size: 24px;
+      text-align: center;
+    }
+ }
+ @media (max-width:768px){
+   .title-h3{
+      font-size: 20px;
+    }
+ }
+ @media (max-width:640px){
+   .title-h3{
+      font-size: 16px;
+      padding-bottom: 0px;
+    }
+ }
+ @media (max-width:360px){
+   .title-h3{
+      font-size: 14px;
+    }
+ }
+
+
+ .screen-2-text__title_yellow{
+    color: #C78100;
+ }
+
+ .screen-2-text__subtitle{
+   width: 466px;
+ }
+ @media (max-width:1024px){
+   .screen-2-text__subtitle{
+     width: 323px;
+    }
+ }
+ @media (max-width:768px){
+   .screen-2-text__subtitle{
+     width: 264px;
+    }
+ }
+ @media (max-width:640px){
+   .screen-2-text__subtitle{
+     width: 382px;
+    }
+ }
+ @media (max-width:360px){
+   .screen-2-text__subtitle{
+     width: 300px;
+    }
+ }
+
+ .screen-2-text__subtitle p{
+   font-size: 16px;
+   line-height: 140%;
+   padding-top: 20px;
+ }
+ @media (max-width:1024px){
+   .screen-2-text__subtitle p{
+    padding-top: 16px;
+    }
+ }
+ @media (max-width:768px){
+   .screen-2-text__subtitle p{
+    font-size: 14px;
+    }
+ }
+
+ /*----------------------3 экран--------------------------------*/
+
+ .help-title{
+    margin-top: 80px;
+ }
+ @media (max-width:1024px){
+    .help-title{
+       margin-top: 64px;
+    }
+ }
+ @media (max-width:640px){
+   .help-title{
+      margin-top: 32px;
+   }
+}
+
+ .help-title h3{
+   font-weight: 300;
+   font-size: 28px;
+   line-height: 24px;
+   text-align: center;
+ }
+ @media (max-width:1024px){
+   .help-title h3{
+      font-size: 24px;
+   }
+}
+@media (max-width:640px){
+   .help-title h3{
+      font-size: 18px;
+   }
+}
+
+.help-button{
+  text-align: center;
+}
+@media (max-width:768px){
+   .help-button{
+      padding-top: 32px;
+  }
+ }
+
+
+ .help-buttons-icons{
+    margin: 47px 395px; 
+    justify-content: space-between;
+    
+ }
+ @media (max-width:1440px){
+   .help-buttons-icons{
+      margin:47px 155px;
+   }
+ }
+ @media (max-width:1366px){
+   .help-buttons-icons{
+      margin:47px 118px;
+   }
+ }
+ @media (max-width:1024px){
+   .help-buttons-icons{
+      margin:32px 125px;
+   }
+ }
+ @media (max-width:768px){
+   .help-buttons-icons{
+      margin: 0px 148px;
+      flex-wrap: wrap;
+      justify-content: space-around;
+   }
+ }
+ @media (max-width:640px){
+   .help-buttons-icons{
+      margin: 0px 91px;
+   }
+ }
+ @media (max-width:360px){
+   .help-buttons-icons {
+      margin: 0px 30px;
+   }
+ }
+
+
+
+ .help-button__icon{
+   width: 150px;
+   height: 150px;
+   border-radius: 50%;
+   border: 1px solid rgba(255, 255, 255, 0.5);
+   box-shadow: 6px 6px 16px rgba(224, 224, 224, 0.6), -6px -6px 16px rgba(255, 255, 255, 0.77);
+   outline: none;
+    
+ }
+ @media (max-width:1024px){
+   .help-button__icon{
+      width: 110px;
+      height: 110px;
+   } 
+   .help-button__icon img{
+      transform:  scale(0.7);
+   }
+ }
+ @media (max-width:1024px){
+   .help-button__icon{
+      width: 80px;
+      height: 80px;
+   } 
+   .help-button__icon img{
+      transform:  scale(0.5);
+   }
+ }
+ 
+ .help-button__text{
+   width: 166px;
+   height: 66px;
+   text-align: center;
+   padding-top: 24px;
+ }
+ @media (max-width:1024px){
+   .help-button__text{
+      width: 140px;
+      height: 60px;
+      padding-top: 20px;
+   }
+ }
+ @media (max-width:640px){
+   .help-button__text{
+      width: 142px;
+      padding-top: 8px;
+   }
+ }
+
+ .help-button__text p{
+   font-family: "GilroyMedium";
+   font-style: normal;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 140%;
+   color: #474747;
+ }
+ @media (max-width:1024px){
+   .help-button__text p{
+      font-size: 14px;
+      line-height: 20px;
+   }
+ }
+
+
+ /*----------------------- линии и картинка------------------------ */
+
+.line {
+   text-align: center;
+   margin: 0 auto;
+   overflow: hidden;
+ }
+
+ .line span {
+   position: relative;
+ }
+
+ .line span::before {
+   display: block;
+   width: 807px;
+   content: "";
+   border-bottom: 1px solid #FFC41E;
+   float: left;
+  }
+  @media (max-width:1440px){
+   .line span::before {
+      width: 607px;
+   }
+  }
+  @media (max-width:1366px){
+   .line span::before {
+      width: 576px;
+   }
+  }
+  @media (max-width:1024px){
+   .line span::before {
+      width: 433px;
+   }
+  }
+  @media (max-width:768px){
+   .line span::before {
+      width: 309px;
+   }
+  }
+  @media (max-width:640px){
+   .line span::before {
+      width: 231px;
+   }
+  }
+  @media (max-width:360px){
+   .line span::before {
+      width: 91px;
+   }
+  }
+ 
+ .line span::after {
+   display: block;
+   width: 807px;
+   content: "";
+   border-bottom: 1px solid #FFC41E;
+   float: right;
+  }
+  @media (max-width:1440px){
+   .line span::after {
+      width: 607px;
+   }
+  }
+  @media (max-width:1366px){
+   .line span::after {
+      width: 576px;
+   }
+  }
+  @media (max-width:1024px){
+   .line span::after {
+      width: 433px;
+   }
+  }
+  @media (max-width:768px){
+   .line span::after {
+      width: 309px;
+   }
+  }
+  @media (max-width:640px){
+   .line span::after {
+      width: 231px;
+   }
+  }
+  @media (max-width:360px){
+   .line span::after {
+      width: 91px;
+   }
+  }
+
+  /*----------------------продолжение 3 экрана--------------------------------*/
+
+  .help-line img{
+   margin-top: 32px;
+  }
+
+
+  .line img{
+   width: 148.41px;
+   height: 144.38px;
+  }
+  @media (max-width:1024px){
+   .line img {
+      transform:  scale(0.7);
+   }
+  }
+  @media (max-width:768px){
+   .line img {
+      transform:  scale(0.5);
+   }
+  }
+  @media (max-width:640px){
+   .line img {
+      transform: scale(0.4);
+   }
+  }
+
+
+  .help-line span::before, .help-line  span::after{
+     padding-top: 103px;
+  }
+
+  .help-overexposure{
+   margin-top: 68px ;
+   margin-bottom: 72px;
+   justify-content: center;  
+  }
+  @media (max-width:1024px){
+   .help-overexposure{
+      margin-top: 42px;
+      margin-bottom: 48px;
+   }
+  }
+  @media (max-width:768px){
+   .help-overexposure{
+      margin-top: 40px ;
+   }
+  }
+  @media (max-width:640px){
+   .help-overexposure{
+      margin: 0px 129px 40px 129px ;
+      flex-wrap: wrap;
+   }
+  }
+  @media (max-width:360px){
+   .help-overexposure{
+     margin: 0px 30px 40px 30px;
+   }
+  }
+
+  .help-overexposure-block{
+     padding-left: 97px;
+  }
+  @media (max-width:1024px){
+   .help-overexposure-block{
+      padding-left: 69px;
+   }
+  }
+  @media (max-width:768px){
+   .help-overexposure-block{
+      padding-left: 47px;
+   }
+  }
+
+
+
+  .help-overexposure-block__title{
+   font-weight: 600;
+   font-size: 28px;
+   line-height: 24px;
+  }
+  @media (max-width:1024px){
+   .help-overexposure-block__title{
+      font-size: 24px;
+      width: 275px;
+      height: 64px;
+   }
+  }
+  @media (max-width:768px){
+   .help-overexposure-block__title{
+      font-size: 20px;
+      width: 189px;
+      height: 54px
+   }
+  }
+  @media (max-width:640px){
+   .help-overexposure-block__title{
+      font-size: 16px;
+      width: 382px;
+      height: 24px;
+      text-align: center;
+   }
+  }
+  @media (max-width:360px){
+   .help-overexposure-block__title{
+      width: 300px;
+   }
+  }
+
+  .help-overexposure-block__text{
+   padding-top: 20px;
+   width: 389px;
+   height: 132px;
+   font-size: 16px;
+   line-height: 140%;
+  }
+  @media (max-width:1024px){
+   .help-overexposure-block__text{
+      width: 275px;
+      height: 198px;
+      padding-top: 4px;
+   }
+  }
+  @media (max-width:768px){
+   .help-overexposure-block__text{
+      width: 190px;
+      height: 240px;
+      font-size: 14px;
+      padding-top: 8px;
+   }
+  }
+  @media (max-width:640px){
+   .help-overexposure-block__text{
+      width: 382px;
+      height: 120px;
+      font-size: 14px;
+      padding-top: 16px;
+   }
+  }
+  @media (max-width:360px){
+   .help-overexposure-block__text{
+      width: 300px;
+      height: 140px;
+   }
+  }
